# fantasy_sim

./: .gitignore  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  DESIGN_DOCUMENT.md  PLATFORM_ABSTRACTION.md  PROJECT_STRUCTURE.md  QUICK_START.md  README.md  vcpkg.json
.cursor/rules/: fantasy_sim.mdc
assets/: README.md
assets/data/: .gitkeep  regions.json
assets/fonts/: .gitkeep
assets/music/: .gitkeep
assets/shaders/: .gitkeep
assets/sounds/: .gitkeep
assets/textures/: .gitkeep
config/: default.json
include/Components/: Hero.h  Inhabitant.h  Renown.h  Skills.h  Transform.h
include/Core/: Config.h  Types.h
include/Data/: EntityStorage.h
include/ECS/: Component.h  Entity.h  System.h
include/Events/: EventSystem.h
include/Game/: Game.h
include/Heroes/: HeroSystem.h
include/Platform/: IInput.h  IVideo.h  PlatformFactory.h  PlatformManager.h  SDLInput.h  SDLVideo.h
include/Race/: RaceManager.h
include/Scenes/: MainMenuScene.h  MenuScene.h  QuitMenuScene.h  Scene.h  SceneFrame.h  SceneFrameGrid.h  SceneManager.h  WorldScene.h  WorldSidebarScene.h
include/Simulation/: LODSystem.h  Region.h  RegionDefinition.h  RegionDefinitionLoader.h  SimulationManager.h  StandardWorldGenerator.h  World.h  WorldGenerator.h
include/Skills/: SkillSystem.h
include/Systems/: AgingSystem.h  BirthDeathSystem.h  HeroSystem.h  MigrationSystem.h  SkillProgressionSystem.h
include/Utils/: MemoryPool.h  Profiler.h  Random.h
scripts/: README.md  build.bat  build.sh  run.bat  run.sh  setup.ps1  setup_env.bat  setup_env.sh
src/: main.cpp
src/Core/: Config.cpp
src/ECS/: Component.cpp  Entity.cpp  System.cpp
src/Game/: Game.cpp
src/Platform/: PlatformFactory.cpp  PlatformManager.cpp  SDLInput.cpp  SDLVideo.cpp
src/Scenes/: MainMenuScene.cpp  MenuScene.cpp  QuitMenuScene.cpp  Scene.cpp  SceneFrame.cpp  SceneFrameGrid.cpp  SceneManager.cpp  WorldScene.cpp  WorldSidebarScene.cpp
src/Simulation/: LODSystem.cpp  Region.cpp  RegionDefinitionLoader.cpp  SimulationManager.cpp  StandardWorldGenerator.cpp  World.cpp
src/Utils/: Random.cpp
